# retroid-pocket-classic-compendium

./: .gitignore  404.html  README.md  _config.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build_publish.yml
apps/: index.html
configuration/: es_systems.xml
docs/: apps.md
esde/: index.html
gallery/: index.html
retroarch/: index.html
search/: search_index.json
